[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Components/invader/Blue 01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Components/invader/Yellow 02.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Components/invader/Yellow 00.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Components/invader/Red 00.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Components/invader/Blue 02.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Components/invader/Blue 00.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Components/invader/Yellow 01.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Components/invader/Red 01.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Components/invader/Red 02.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Components/Invaders.gd" type="Script" id=10]

[node name="Invaders" type="Node2D"]
position = Vector2( 960, 540 )
script = ExtResource( 10 )

[node name="shoot_timeout" type="Timer" parent="."]

[node name="Ships" type="Node2D" parent="."]

[node name="Blue 00" parent="Ships" instance=ExtResource( 6 )]
position = Vector2( -300, -150 )
scale = Vector2( 2.5, 2.5 )

[node name="Blue 01" parent="Ships" instance=ExtResource( 1 )]
position = Vector2( -300, 0 )
scale = Vector2( 2.5, 2.5 )

[node name="Blue 02" parent="Ships" instance=ExtResource( 5 )]
position = Vector2( -300, 150 )
scale = Vector2( 2.5, 2.5 )

[node name="Red 00" parent="Ships" instance=ExtResource( 4 )]
position = Vector2( 0, -150 )
scale = Vector2( 2.5, 2.5 )

[node name="Red 01" parent="Ships" instance=ExtResource( 8 )]
scale = Vector2( 2.5, 2.5 )

[node name="Red 02" parent="Ships" instance=ExtResource( 9 )]
position = Vector2( 0, 150 )
scale = Vector2( 2.5, 2.5 )

[node name="Yellow 00" parent="Ships" instance=ExtResource( 3 )]
position = Vector2( 300, -150 )
scale = Vector2( 2.5, 2.5 )

[node name="Yellow 01" parent="Ships" instance=ExtResource( 7 )]
position = Vector2( 300, 0 )
scale = Vector2( 2.5, 2.5 )

[node name="Yellow 02" parent="Ships" instance=ExtResource( 2 )]
position = Vector2( 300, 150 )
scale = Vector2( 2.5, 2.5 )

[connection signal="timeout" from="shoot_timeout" to="." method="_on_shoot_timeout_timeout"]
[connection signal="invader_shot" from="Ships/Blue 00" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Blue 01" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Blue 02" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Red 00" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Red 01" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Red 02" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Yellow 00" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Yellow 01" to="." method="_on_invader_shot"]
[connection signal="invader_shot" from="Ships/Yellow 02" to="." method="_on_invader_shot"]
